# occt-wasm

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.builder  LICENSE-APACHE  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  release-please-config.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-wasi.yml  build-wasm.yml  ci.yml  osv-scan.yml  publish-crate.yml  publish.yml  release.yml  warm-cache.yml
.husky/: commit-msg  pre-commit  pre-push
benchmarks/: baseline.json
crate/: Cargo.toml  README.md
crate/examples/: cli.rs
crate/src/: error.rs  kernel.rs  kernel_generated.rs  lib.rs  occt-wasm.wasm.br  types.rs
crate/tests/: integration.rs
examples/node-cli/: example.mjs
examples/step-viewer/: index.html
examples/three-js/: index.html
facade/include/: occt_kernel.h
facade/src/: bindings.cpp  booleans.cpp  construction.cpp  curve.cpp  evolution.cpp  healing.cpp  (+11 more)
scripts/: bench-check.js  build.sh  builder-image.sh  fetch-rapidjson.sh  publish.sh  symbol_dispose.js
test/: api-coverage.test.ts  batch-apis.test.ts  bench.test.ts  benchmark.ts  brep-cache.test.ts  edge-cases.test.ts  expanded.test.ts  history-wrapper.test.ts  integration.test.ts  new-features.test.ts  parity-shell-sign.test.ts  parity-tolerance.test.ts  raw-access.test.ts  smoke.test.ts  surface-center-of-mass.test.ts  ts-wrapper-bulk.test.ts  ts-wrapper.test.ts  xcaf.test.ts
ts/: package-lock.json  package.json  tsconfig.json  typedoc.json
xtask/: Cargo.toml
(+21 files in other folders)
