[workspace]
members = ["xtask", "crate"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "git+https://github.com/andymai/occt-wasm.git"
rust-version = "1.85"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
nursery = { level = "warn", priority = -1 }
panic = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
# CLI tools commonly need these
missing_errors_doc = "allow"
module_name_repetitions = "allow"
